--- a/Php/Php/_docker/php/Dockerfile
+++ b/Php/Php/_docker/php/Dockerfile
@@ -17,7 +17,7 @@ RUN apt update && apt install -y \
       apt-get clean && \
       rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-COPY ./_docker/app/php.ini /usr/local/etc/php/conf.d/php.ini
+COPY ./_docker/php/php.ini /usr/local/etc/php/conf.d/php.ini
 
 # Install composer
 ENV COMPOSER_ALLOW_SUPERUSER=1
