Доработал команды в Makefile

--- a/Clojure/Makefile
+++ b/Clojure/Makefile
@@ -7,5 +7,8 @@ stop:
 build:
 	docker-compose up -d --build
 
+restart:
+	make stop && make up
+
 run:
-	docker-compose exec -T app bash -c "lein run & jobs"
+	docker-compose exec -T app bash -c "nohup lein run > server.log 2>&1 & jobs"
